# g2

./: .gitattributes  .gitmodules  CMakeLists.txt
examples/: CMakeLists.txt
examples/ecs_test/: CMakeLists.txt  ecs_test.cpp
examples/test/: CMakeLists.txt  build_assets.sh  pipeline.json  pipeline2.json
examples/test/assets/: cullMeshlets.compute.glsl  depthPipeline.pipeline  drawData.glsl  effect.fx  fullscreen.vert  geometry.glsl  materialDepth.frag  materialDepth.pipeline  normals.glsl  pbr.glsl  pipeline.json  pipeline.pipeline  scene.glsl  shader.frag  shader.vert  shadow.vert  transform.glsl  viewVB.frag  visibility.frag  visibility.vert  visibility_debug.pipeline  visibility_pass.pipeline  visibility_shade.frag  visibility_shade.pipeline  visibility_shade.vert
examples/test/src/: camera.h  main.cpp  shader.frag  shader.vert  shader2.vert
g2/: CMakeLists.txt  get_flatbuffers.sh
g2/archive/: CMakeLists.txt  gen_archive_flatfbuffers.sh
g2/archive/flatbufferschemas/: archive.fbs
g2/archive/include/g2/archive/: g2archive.h
g2/archive/src/: g2archive.cpp
g2/assets/: CMakeLists.txt
g2/assets/include/g2/assets/: asset_registry.h
g2/assets/src/: asset_registry.cpp
g2/core/: CMakeLists.txt
g2/core/include/g2/core/: Transform.h  core.h
g2/core/src/: core.cpp
g2/ecs/: CMakeLists.txt
g2/ecs/include/g2/ecs/: query.h  registry.h  type.h  view.h
g2/ecs/src/: query.cpp  registry.cpp
g2/gfx/: CMakeLists.txt  gen_flatfbuffers.sh  gen_gfx_flatfbuffers.sh
g2/gfx/flatbufferschemas/: effect.fbs  image.fbs  material.fbs  mesh.fbs  pipeline.fbs  texture.fbs  vec.fbs  vk.fbs
g2/gfx/include/g2/: command_encoder.h  gfx_instance.h  viewport.h
g2/gfx/src/: Buffer.cpp  Buffer.h  command_encoder.cpp  culling.h  descriptors.cpp  descriptors.h  device.cpp  device.h  effect.cpp  effect.h  forward_render_graph.h  gfx_instance.cpp  image.cpp  image.h  material.cpp  material.h  mesh.cpp  mesh.h  physical_device.h  pipeline.cpp  pipeline.h  render_context.h  rendergraph_builder.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  swapchain.cpp  swapchain.h  upload.cpp  upload.h  validation.cpp  validation.h  vb_render_graph.h  vk.h  vma_impl.cpp
g2/gltf_compiler/: CMakeLists.txt
g2/gltf_compiler/src/: gltf_compiler.cpp
g2/pipeline_tools/: CMakeLists.txt
g2/pipeline_tools/effect_compiler/: CMakeLists.txt
g2/pipeline_tools/effect_compiler/src/: effect_compiler.cpp
g2/pipeline_tools/gltf_compiler/: CMakeLists.txt
g2/pipeline_tools/gltf_compiler/src/: cgltf_impl.cpp  gltf_compiler.cpp  material_compiler.cpp  material_compiler.h  mesh_compiler.cpp  mesh_compiler.h  scene_compiler.cpp  scene_compiler.h  sdf_compiler.cpp  sdf_compiler.h
g2/pipeline_tools/material_compiler/: CMakeLists.txt
g2/pipeline_tools/material_compiler/src/: material_compiler.cpp
g2/pipeline_tools/mesh_compiler/: CMakeLists.txt
g2/pipeline_tools/mesh_compiler/src/: mesh_compiler.cpp
g2/pipeline_tools/pipeline_build_generator/: CMakeLists.txt
g2/pipeline_tools/pipeline_build_generator/src/: ninja.cpp  ninja.h  pipeline_build_gen.cpp
g2/pipeline_tools/shader_compiler/: CMakeLists.txt
g2/pipeline_tools/shader_compiler/src/: main.cpp  module.cpp  module.h  reflection.cpp  reflection.h
g2/pipeline_tools/texture_compiler/: CMakeLists.txt
g2/pipeline_tools/texture_compiler/src/: texture_compiler.cpp
g2/platform/: CMakeLists.txt
g2/platform/desktop/: application.cpp
g2/platform/include/g2/: application.h  input.h  keyboard.h
g2/render/: CMakeLists.txt
g2/render/include/g2/render/: render.h
g2/render/src/: render_system.cpp
g2/scene/: CMakeLists.txt  gen_scene_flatfbuffers.sh
g2/scene/flatbufferschemas/: scene.fbs
g2/scene/include/g2/: scene.h
g2/scene/src/: scene.cpp
g2/shader_compiler/: CMakeLists.txt
g2/shader_compiler/src/: main.cpp
g2/util/: CMakeLists.txt
g2/util/include/g2/: fbutil.h  file.h  hat.h
g2/util/src/: fbutil.cpp  file.cpp
gear/core/: CMakeLists.txt
gear/gfx/: CMakeLists.txt
gear/gfx/src/: physical_device.cpp
gear/platform/desktop/: application.cpp
